[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/UI/main_menu.gd" type="Script" id=1]
[ext_resource path="res://UI/buttonstyle_normal.tres" type="StyleBox" id=2]
[ext_resource path="res://UI/buttonstyle_pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://UI/lab_theme.tres" type="Theme" id=4]
[ext_resource path="res://UI/ale_dynamicfont.tres" type="DynamicFont" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://Scripts/UI/focus_control.gd" type="Script" id=7]
[ext_resource path="res://Scripts/UI/CheckSave.gd" type="Script" id=8]
[ext_resource path="res://Images/menu pic.png" type="Texture" id=9]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.579102
margin_bottom = -0.579102
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.069
anchor_top = 0.11
anchor_right = 0.318
anchor_bottom = 0.908
margin_left = 0.344002
margin_right = -5.63202
margin_bottom = -60.8
custom_constants/separation = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newgame" type="Button" parent="VBoxContainer"]
margin_right = 248.0
margin_bottom = 63.0
focus_neighbour_top = NodePath("../quit")
focus_neighbour_bottom = NodePath("../continue")
size_flags_vertical = 3
theme = ExtResource( 4 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "main_new"
script = ExtResource( 7 )

[node name="continue" type="Button" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 248.0
margin_bottom = 134.0
focus_neighbour_top = NodePath("../newgame")
focus_neighbour_bottom = NodePath("../instructions")
size_flags_vertical = 3
theme = ExtResource( 4 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "main_cont"
script = ExtResource( 8 )

[node name="instructions" type="Button" parent="VBoxContainer"]
margin_top = 141.0
margin_right = 248.0
margin_bottom = 205.0
focus_neighbour_top = NodePath("../continue")
focus_neighbour_bottom = NodePath("../scores")
size_flags_vertical = 3
theme = ExtResource( 4 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "main_inst"

[node name="scores" type="Button" parent="VBoxContainer"]
margin_top = 212.0
margin_right = 248.0
margin_bottom = 276.0
focus_neighbour_top = NodePath("../instructions")
focus_neighbour_bottom = NodePath("../credits")
size_flags_vertical = 3
theme = ExtResource( 4 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "main_score"

[node name="credits" type="Button" parent="VBoxContainer"]
margin_top = 283.0
margin_right = 248.0
margin_bottom = 347.0
focus_neighbour_top = NodePath("../scores")
focus_neighbour_bottom = NodePath("../quit")
size_flags_vertical = 3
theme = ExtResource( 4 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "main_creds"

[node name="quit" type="Button" parent="VBoxContainer"]
margin_top = 354.0
margin_right = 248.0
margin_bottom = 418.0
focus_neighbour_top = NodePath("../credits")
focus_neighbour_bottom = NodePath("../newgame")
size_flags_vertical = 3
theme = ExtResource( 4 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "main_quit"

[node name="info" type="Label" parent="."]
anchor_left = 0.585
anchor_top = 0.074
anchor_right = 0.955
anchor_bottom = 0.157
margin_left = 15.96
margin_top = 2.6
margin_right = -16.92
margin_bottom = -0.200005
custom_fonts/font = ExtResource( 5 )
text = "Info"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="develop_by" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -166.0
margin_top = -27.0
theme = ExtResource( 4 )
text = "Versus Windmills"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="power_by" type="Label" parent="."]
anchor_left = 0.018
anchor_top = 0.874
anchor_right = 0.221
anchor_bottom = 0.954
margin_left = 23.3112
margin_top = 20.717
margin_right = -21.5608
margin_bottom = -13.283
theme = ExtResource( 4 )
text = "Powered by Godot Engine"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="power_by"]
position = Vector2( 276.029, 8.31048 )
texture = ExtResource( 6 )
[connection signal="pressed" from="VBoxContainer/newgame" to="." method="_on_newgame_pressed"]
[connection signal="pressed" from="VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_newgame_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
